# sqlite-jsonb

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: buffer.rs  lib.rs  serde.rs
