[package]
name = "sqlite-jsonb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", optional = true }
thiserror = "1.0.56"

[features]
default = ["serde"]

[dev-dependencies]
serde_json = "1.0.111"
